--- a/同源策略及跨域问题解决.md
+++ b/同源策略及跨域问题解决.md
@@ -10,12 +10,12 @@
 &emsp;&emsp;同源策略是&nbsp; **浏览器行为** &nbsp;，因此&nbsp;**拦截的是客户端发出的请求回来的数据接收，即请求发送了，服务器响应了，但是无法被浏览器接收**&nbsp;。<br>
 （2）同源检查示例：<br>
 &emsp;&emsp;&emsp;例如：http://store.company.com/dir/page.html<br>
-|URL|结果|原因|<br>
-|--|--|--|<br>
-|http://store.company.com/dir2/other.html|同源|只有路径不同|<br>
-|http://store.company.com/dir/inner/another.html|同源|只有路径不同|<br>
-|https://store.company.com/secure.html|非同源|协议不同(http和https)|<br>
-|http://news.company.com/dir/other.html|非同源|主机号不同(news和store)|<br>
-|http://store.company.com:81/dir/etc.html|非同源|端口号不同(http端口默认为80)|
+| URL | 结果 | 原因 |
+|--|--|--|
+| http://store.company.com/dir2/other.html|同源|只有路径不同 |
+| http://store.company.com/dir/inner/another.html|同源|只有路径不同 |
+| https://store.company.com/secure.html|非同源|协议不同(http和https) |
+| http://news.company.com/dir/other.html|非同源|主机号不同(news和store) |
+| http://store.company.com:81/dir/etc.html|非同源|端口号不同(http端口默认为80) |
 # 跨域请求
         
